# padrugsv7-qt0djh

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security-scan.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/helm/ai-service/: Chart.yaml  values.yaml
infrastructure/helm/api-gateway/: Chart.yaml  values.yaml
infrastructure/helm/auth-service/: Chart.yaml  values.yaml
infrastructure/helm/document-service/: Chart.yaml  values.yaml
infrastructure/helm/integration-service/: Chart.yaml  values.yaml
infrastructure/helm/web/: Chart.yaml  values.yaml
infrastructure/helm/workflow-service/: Chart.yaml  values.yaml
infrastructure/monitoring/elk/: elasticsearch.yml  kibana.yml  logstash.conf
infrastructure/monitoring/grafana/: datasources.yml
infrastructure/monitoring/grafana/dashboards/: business.json  services.json
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/security/: network-policies.yaml  pod-security-policies.yaml  rbac.yaml  service-accounts.yaml
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/environments/dev/: main.tf
infrastructure/terraform/environments/dr/: main.tf
infrastructure/terraform/environments/prod/: main.tf
infrastructure/terraform/environments/staging/: main.tf
infrastructure/terraform/modules/documentdb/: main.tf  variables.tf
infrastructure/terraform/modules/eks/: main.tf  variables.tf
infrastructure/terraform/modules/elasticache/: main.tf  variables.tf
infrastructure/terraform/modules/networking/: main.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  variables.tf
infrastructure/terraform/modules/s3/: main.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  tsconfig.json
src/backend/ai-service/: Dockerfile  pyproject.toml  requirements.txt
src/backend/ai-service/src/: main.py
src/backend/ai-service/src/config/: model_config.py
src/backend/ai-service/src/controllers/: analysis_controller.py
src/backend/ai-service/src/models/: clinical_model.py
src/backend/ai-service/src/services/: document_analyzer.py  gpt_service.py
src/backend/ai-service/src/utils/: text_processor.py
src/backend/ai-service/tests/: test_ai_service.py
src/backend/api-gateway/: Dockerfile  package.json  tsconfig.json
src/backend/api-gateway/src/: index.ts
src/backend/auth-service/: Dockerfile  package.json  tsconfig.json
src/backend/auth-service/src/: index.ts
src/backend/document-service/: Dockerfile  pyproject.toml  requirements.txt
src/backend/document-service/src/: main.py
src/backend/document-service/src/config/: settings.py
src/backend/document-service/src/controllers/: document_controller.py
src/backend/document-service/src/models/: document.py
src/backend/document-service/src/services/: document_service.py
src/backend/document-service/src/utils/: file_processor.py
src/backend/document-service/tests/: test_document_service.py
src/backend/integration-service/: Dockerfile  pom.xml
src/backend/k8s/: ai-service-deployment.yaml  api-gateway-deployment.yaml  auth-service-deployment.yaml  configmap.yaml  document-service-deployment.yaml  ingress.yaml  integration-service-deployment.yaml  secrets.yaml  workflow-service-deployment.yaml
src/backend/shared/proto/: analysis.proto  authorization.proto  document.proto
src/backend/shared/schemas/: authorization.schema.json  clinical-criteria.schema.json  document.schema.json
src/backend/workflow-service/: Dockerfile  pom.xml
src/web/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  main.tsx  vite-env.d.ts
src/web/src/api/: analytics.api.ts  authorization.api.ts  document.api.ts
src/web/src/config/: api.config.ts  auth.config.ts  chart.config.ts  routes.config.ts
src/web/src/constants/: api.constants.ts  form.constants.ts  menu.constants.ts  validation.constants.ts
src/web/src/hooks/: useAnalytics.ts  useAuth.ts  useForm.ts  useNotification.ts  useRequest.ts  useTheme.ts
src/web/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  MainLayout.tsx
src/web/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  NewRequest.tsx  NotFound.tsx  (+3 more)
src/web/tests/: setup.ts
(+105 files in other folders)
