[tool.poetry]
name = "epa-ai-service"
version = "1.0.0"
description = "Enhanced Prior Authorization AI Service for clinical document analysis and criteria matching"
authors = ["EPA Development Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies - v0.100.0+ for FastAPI enterprise features
fastapi = "^0.100.0"
pydantic = "^2.0.0"
uvicorn = "^0.23.0"
# gRPC dependencies for service mesh - v1.59.0+ for stability
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
protobuf = "^4.24.0"

# AI/ML dependencies
tensorflow = "^2.13.0"  # Enterprise-grade ML framework
transformers = "^4.31.0"  # Latest Hugging Face transformers
langchain = "^0.0.27"  # Gen AI orchestration
openai = "^1.0.0"  # GPT-4 integration

# Data processing dependencies
numpy = "^1.24.0"
pandas = "^2.0.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

# Code quality
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest tests/ --cov=src --cov-report=term-missing --cov-report=xml --cov-report=html"
format = "black src/ tests/ && isort src/ tests/"
lint = "flake8 src/ tests/ && mypy src/ tests/"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload --log-level debug"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "src/**/*.py"
extend-exclude = "/migrations"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
max-complexity = 10
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true